# curswork

./: .env_example  .gitignore  README.md  pyproject.toml
src/: main.py  reports.py  services.py  utils.py
test/: conftest.py
